# rfad-launcher

./: .gitignore  README.md  app.vue  bun.lockb  config.ts  launcher-mods.json  launcher-patches.json  lversions.json  nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts  versions.json
.github/workflows/: build.yml
assets/css/: global.scss  typography.scss
components/: Button.vue  CircleButton.vue  DirErrorMessage.vue  DownloadingMessage.vue  DropdownButton.vue  GoogleDriveDirError.vue  LauncherUpdatingMessage.vue  ModComponent.vue  PatchComponent.vue  SettingsModal.vue  UnpackingMessage.vue  UpdateAvailableMessage.vue  UpdateConfirmationMessage.vue  UpdatingMessage.vue
components/base/: Box.vue  MessageBox.vue
components/icons/: Clock.vue  Cog.vue  Discord.vue  Download.vue  Expand.vue  Folder.vue  FolderSmallStroke.vue  Gamepad.vue  MO2.vue  Minus.vue  OpenBook.vue  Package.vue  Telegram.vue  User.vue  X.vue
pages/: index.vue
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  gdrive.rs  lib.rs  main.rs
types/: types.ts
