[package]
name = "rfad-launcher"
version = "0.1.0"
description = "RFAD Community Launcher"
authors = ["amirust"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rfad_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
google-drive3 = "6.0.0+20240618"
serde = "1"
serde_json = "1"
hyper-util = "0.1.10"
hyper-rustls = { version = "0.27.5", default-features = false, features = ["http1", "logging", "native-tokio", "tls12", "ring"] }
hyper = { version = "1.6.0", features = ["full"] }
tokio-util = "0.7.13"
http-body-util = "0.1.2"
tokio = "1.43.0"
bytes = "1.10.0"
futures = "0.3.31"
